기능 통합 대비 commit

--- a/devwareProject/src/main/resources/static/index.html
+++ b/devwareProject/src/main/resources/static/index.html
@@ -7,10 +7,11 @@
 <body>
 	<h1>회원 관리</h1>
 	<a href="/boardWriteForm">게시판 글쓰기</a><p>
-	<a href="/typeBoardList">사내 게시판</a><p>
-	<a href="/teamBoardList">소속팀 게시판</a><p>
-	<a href="/qnaBoardList">Q&A 게시판</a><p>
-	<a href="/gatherBoardList">스터디&소모임 게시판</a><p>
+	<a href="/detailBoard">게시글 상세조회</a><p>
+	
+
+	
+	
 	
 	
 	
