메일업로드[제환]

--- a/devwareProject/src/main/resources/static/index.html
+++ b/devwareProject/src/main/resources/static/index.html
@@ -9,7 +9,14 @@
 	<a href="/boardWriteForm">게시판 글쓰기</a><p>
 	<a href="/detailBoard">게시글 상세조회</a><p>
 	
-
+	<h1>메일 테스트</h1>
+	<a href="/mail/mailWriteForm">devware 메일 쏘기</a><p>
+	<a href="/mail/receiveMessage">메일 받기</a><p>
+	<a href="/mail/sendMailList">devware 보낸 메일 목록</a><p>
+	<a href="/mail/receiveMailList">devware 받은 메일 목록</a><p>
+	<a href="/mail/importantMailList">devware 중요 메일 목록</a><p>
+	<a href="/mail/deletedMailList">devware 휴지통</a><p>
+	<a href="/mail/viewMailList?mailType=0">받은 메일 리스트</a>
 	
 	
 	
