--- a/devwareProject/src/main/resources/static/index.html
+++ b/devwareProject/src/main/resources/static/index.html
@@ -5,6 +5,13 @@
 <title>Insert title here</title>
 </head>
 <body>
+	<h1>기능 테스트</h1>
+	<a href="/signUpForm">회원가입</a><p>
+	<a href="/loginForm">로그인</a><p>
+	<a href="/findIdPwForm">아이디/비밀번호 찾기</a><p>
+	<a href="/userlist">모든 회원 조회 하기</a><p>
+	<a href="/logoutForm">로그아웃</a><p>
+
 	<h1>회원 관리</h1>
 	<a href="/boardWriteForm">게시판 글쓰기</a><p>
 	<a href="/detailBoard">게시글 상세조회</a><p>
