--- a/devwareProject/src/main/resources/static/index.html
+++ b/devwareProject/src/main/resources/static/index.html
@@ -25,6 +25,12 @@
 	<a href="/mail/deletedMailList">devware 휴지통</a><p>
 	<a href="/mail/viewMailList?mailType=0">받은 메일 리스트</a>
 	
+	<h1>근태관리</h1>
+	<a href="/commute">근태관리</a><p>
+	<a href="/commuting">근태관리</a><p>
+	
+	<h1>일정관리</h1>
+	
 	
 	
 	
