채팅 요소 추가[제환 12-07]

--- a/devwareProject/src/main/resources/static/index.html
+++ b/devwareProject/src/main/resources/static/index.html
@@ -25,6 +25,13 @@
 	<a href="/mail/deletedMailList">devware 휴지통</a><p>
 	<a href="/mail/viewMailList?mailType=0">받은 메일 리스트</a>
 	
+	<h1>채팅 테스트</h1>
+	<a href="/chatRoomList?empno=1&empName=제환">채팅 테스트1</a><p>
+	<a href="/chatRoomList?empno=2&empName=지웅">채팅 테스트2</a><p>
+	<a href="/chatRoomList?empno=3&empName=건희">채팅 테스트3</a><p>
+	<a href="/chatRoomList?empno=4&empName=우석">채팅 테스트4</a><p>
+	<a href="/chatRoomList?empno=5&empName=태광">채팅 테스트5</a><p>
+	
 	<h1>근태관리</h1>
 	<a href="/commute">근태관리</a><p>
 	<a href="/commuting">근태관리</a><p>
