--- a/devwareProject/src/main/resources/static/index.html
+++ b/devwareProject/src/main/resources/static/index.html
@@ -13,7 +13,7 @@
 	<a href="/logoutForm">로그아웃</a><p>
 
 	<h1>회원 관리</h1>
-	<a href="/boardWriteForm">게시판 글쓰기</a><p>
+	<a href="/board/WriteForm">게시판 글쓰기</a><p>
 	<a href="/detailBoard">게시글 상세조회</a><p>
 	
 	<h1>메일 테스트</h1>
