근태 기능, 문서 결재 기능, 근태 결재 기능 2022.12.09 김우석

--- a/devwareProject/src/main/resources/static/index.html
+++ b/devwareProject/src/main/resources/static/index.html
@@ -36,6 +36,14 @@
 	<h1>근태관리</h1>
 	<a href="/commute">근태관리</a><p>
 	<a href="/commuting">근태관리</a><p>
+	<a href="/approvalList">결제인 리스트</a><p>
+	<a href="myApvDetail1">결제상세</a><p>
+	<a href="ApvDetail2">결제상세</a><p>
+	<a href="myApvList">내결제함</a><p>
+	<a href="notAuthApvList">미결재함</a><p>
+	<a href="writeForm1">결재작성</a><p>
+	<a href="writeForm2">결재작성2</a><p>
+	<a href="boardWriteForm">결재작성3</a><p>
 	
 	<h1>일정관리</h1>
 	
