--- a/devwareProject/src/main/resources/static/index.html
+++ b/devwareProject/src/main/resources/static/index.html
@@ -5,6 +5,10 @@
 <title>Insert title here</title>
 </head>
 <body>
+	<h1>메인화면</h1>
+	<a href="/main">메인화면</a><p>
+
+	
 	<h1>기능 테스트</h1>
 	<a href="/signUpForm">회원가입</a><p>
 	<a href="/loginForm">로그인</a><p>
